--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "archiver": "^3.1.1",
     "chalk": "^3.0.0",
-    "foundry-pc-types": "gitlab:Eranziel/foundry-pc-types",
+    "foundry-vtt-types": "github:kmoschcau/foundry-vtt-types#foundry-0.7.9",
     "fs-extra": "^9.0.1",
     "gulp": "^4.0.2",
     "gulp-git": "^2.10.1",
