--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
 			"ES6",
 			"ES2017"
 		],
-		"types": ["foundry-pc-types"],
+		"types": ["foundry-vtt-types"],
 		"strict": true,
 		"skipLibCheck": true,
 	}
