--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "author": "",
   "license": "",
   "devDependencies": {
+    "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-2",
     "archiver": "^3.1.1",
     "chalk": "^3.0.0",
-    "foundry-vtt-types": "github:kmoschcau/foundry-vtt-types#foundry-0.7.9",
     "fs-extra": "^9.0.1",
     "gulp": "^4.0.2",
     "gulp-git": "^2.10.1",
@@ -28,7 +28,7 @@
     "sass": "^1.30.0",
     "ts-loader": "^8.0.12",
     "tslib": "^1.14.1",
-    "typescript": "^3.9.7",
+    "typescript": "^4.2.3",
     "webpack-stream": "^5.2.1",
     "yargs": "^15.4.1"
   },
